fix: Card View - List Dropdown not aligned

--- a/client/src/components/CardModal/CardModal.module.scss
+++ b/client/src/components/CardModal/CardModal.module.scss
@@ -119,6 +119,10 @@
     margin-left: 4px;
   }
 
+  .dropdownMenu {
+    margin-left: 2px;
+  }
+
   .text {
     color: var(--textColor1);
     font-size: 12px;
